syntax = "proto3";

package tgdis;

option go_package = "github.com/lostwisp/telegram-discord-bridge/gRPC/tg-dis";

service TgdisMessage{
    rpc NewMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest{
    string message = 1;
}

message MessageResponse{
    int64 score = 1;
}